tests/reference/asr-type_mismatch1-8630f34.stderr
warning: Implied save feature
 --> tests/errors/type_mismatch1.f90:3:1
  |
3 | integer :: x
  | ^^^^^^^^^^^^ Assuming save attribute implicitly for variables

semantic error: Type mismatch in assignment, the types must be compatible
 --> tests/errors/type_mismatch1.f90:4:1
  |
4 | x = "x"
  | ^   ^^^ type mismatch (integer and character)
